<resources>
    <string name="app_name">MIZU</string>

    <string name="Conectar">Conectar</string>
    <string name="Desconectar">Desconectar</string>
    <string name="BuscarDispositivo">Buscar</string>

    <string name="Bluetooth">Bluetooth</string>

    <string name="ListaVinculados">Lista de dispositivos vinculados</string>
    <string name="ListaDisponibles">Lista de dispositivos disponibles</string>

    <string name="no_vinculados">No hay dispositivos Vinculados</string>
    <string name="buscandoDispositivo">Buscando dispositivos disponibles</string>

    <string name="IniciandoDescubrimiento">Búscando dispositivos</string>
    <string name="Espere">Por favor espere</string>
    <string name="ErrorIniciandoDescubrimiento">Error al iniciar búsqueda de dispositivos bluetooth</string>
    <string name="Vinculando">Vinculando dispositivo</string>
    <string name="Conexion">Conectando...</string>

    <string name="Salir">Salir</string>
    <string name="Si">Si</string>
    <string name="No">No</string>
    <string name="Ok">Ok</string>
    <string name="Cancelar">Cancelar</string>
    <string name="MsgConfirmarApagar">¿Desea apagar el BLUETOOTH?</string>

    <string name="ErrorHora">Hora Erronea</string>
    <string name="MsgErrorHora">La HORA es mayor a 23, ingrese un número menor</string>
    <string name="ErrorMinutos">Minutos Erroneos</string>
    <string name="MsgErrorMinutos">Los MINUTOS son mayores a 59, ingrese un número menor</string>

    <string name="Encender">Encender</string>
    <string name="Apagar">Apagar</string>

    <string name="EncendidoManual">Encendido manual</string>
    <string name="ListaProgramas">Lista de programas</string>

    <string name="Activo">Activo</string>
    <string name="Suspender">Suspender</string>

    <string name="Dia">Día</string>

    <string-array name="aTiempoRiego">
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hs</item>
        <item>1 hs 30 min</item>
        <item>2 hs</item>
    </string-array>

    <string name="emptyList">Lista vacia</string>

</resources>
