<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:id="@+id/tvBluetooth"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Bluetooth" />

        <Button
            android:id="@+id/btnBluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Conectar" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layoutDispositivosVinculados"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ListaVinculados" />

        <ListView
            android:id="@+id/listaDispositivosVinculados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salir" />
</LinearLayout>
