<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/textoNombreDispositivo"
            android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:text="@string/EncendidoManual" />

            <Button
                android:id="@+id/btnEncender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_selector"
                android:text="@string/Encender"
                android:textColor="#ffffff" />

            <Button
                android:id="@+id/btnApagar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/btn_selector"
                android:text="@string/Apagar"
                android:textColor="#ffffff" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutFragments"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtListaProgramas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounder_corner"
                android:text="@string/ListaProgramas" />

            <!--Hay que refactorizar este elemento con un fragmento como el que esta abajo-->
            <ListView
                android:id="@+id/listaProgramas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:background="@drawable/rounder_corner"/>

            <TextView
                android:id="@+id/emptyListView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:text="@string/emptyList" >
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBotonesProgramas"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAnadirPrograma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:background="@drawable/btn_selector"
                android:textColor="#ffffff"
                android:text="Añadir"
       />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>